# MiniZinc-linter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  PKGBUILD.in  README.md  lzn.install.in  makepkg-light.sh.in
src/: CMakeLists.txt  argparse.cpp  argparse.hpp  main.cpp
src/linter/: CMakeLists.txt  asd.cpp  asd.hpp  file_utils.cpp  file_utils.hpp  overload.hpp  registry.cpp  registry.hpp  rules.cpp  rules.hpp  rustiter.hpp  searcher.cpp  searcher.hpp  stdoutprinter.cpp  stdoutprinter.hpp  utils.cpp  utils.hpp
src/linter/rules/: CMakeLists.txt  compacted-if.cpp  constant-variable.cpp  element-predicate.cpp  functionally-defined-search-hint.cpp  global-constraint-reified.cpp  globals-in-function.cpp  no-domain-var-decl.cpp  no-domain-var-decl.hpp  one-based-arrays.cpp  operators-on-var.cpp  symmetry-breaking.cpp  unused-var-funcs.cpp  var-in-gen.cpp  var-in-if-where.cpp  zero-one-variables.cpp
tests/: CMakeLists.txt  LinterEnv.test.cpp  compacted-if.test.cpp  constant-variable.test.cpp  functionally-defined-search-hint.test.cpp  global-constraint-reified.test.cpp  no-domain-var-decl.test.cpp  one-based-arrays.test.cpp  operators-on-var.test.cpp  rustiter.test.cpp  searcher.test.cpp  test_common.hpp  unused-var-funcs.test.cpp  var-in-gen.test.cpp  var-in-if-where.test.cpp  zero-one-variables.test.cpp
